# AgenticWorkflow

./: .gitignore  README.md
DisputeAgent-Reasoning/: .env.example  pyproject.toml  requirements.txt
DisputeAgent-Reasoning/infra/: .gitignore
DisputeAgent-Reasoning/infra/terraform/deployments/non-prod/: .terraform.lock.hcl  apply.sh  backend.tf  imports_log_groups.tf  main.tf  outputs.tf  plan.sh  s3_analysis_lambda_access.tf  terraform.tfvars  variables.tf
DisputeAgent-Reasoning/infra/terraform/deployments/prod/: .terraform.lock.hcl  apply.sh  backend.tf  imports_log_groups.tf  main.tf  outputs.tf  plan.sh  s3_analysis_lambda_access.tf  terraform.tfvars.example  variables.tf  versions.tf
DisputeAgent-Reasoning/infra/terraform/modules/dispute-analysis-lambda/: main.tf  outputs.tf  variables.tf
DisputeAgent-Reasoning/lambda/: agentic_lambda.py  disput_analysis_lambda_handler.py
DisputeAgent-Reasoning/runtime/: Dockerfile  main.py  requirements.txt
DisputeAgent-Reasoning/src/: __init__.py  config.py  graph_node_logging.py  openai_message_parts.py
DisputeAgent-Reasoning/src/analysis_agent/: case_documents.py  document_ingest.py  payload.py  prompts.py  retry.py  schema.py  utilities.py
DisputeAgent-Reasoning/src/analysis_agent/database/: db_utils.py
DisputeAgent-Reasoning/src/analysis_agent/langgraph/: graph.py  nodes.py  state.py
DisputeAgent-Reasoning/stream-lambda/: eventBridgeDisputePublish.test.ts  eventBridgeDisputePublish.ts  index.ts  package-lock.json  package.json  streamProcessor.ts  tsconfig.json
(+14 files in other folders)
