[project]
name = "dispute-analysis"
version = "0.1.0"
description = "Credit dispute triage with LangGraph + OpenAI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.4,<2",
    "openai>=2.31",
    "anthropic>=0.96",
    "python-dotenv>=1.0.0",
    "pydantic>=2.12,<3",
    "pydantic-settings>=2.0",
    "boto3>=1.42.89,<2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
dispute-analysis = "dispute_analysis.cli:main"
